--- a/.github/workflows/ci-ipfs.yml
+++ b/.github/workflows/ci-ipfs.yml
@@ -28,7 +28,7 @@ permissions:
 jobs:
   deploy-ipfs:
     env:
-      FILE_NAME: ipfs_source_code.zip
+      FILE_NAME: ipfs_source_code
     runs-on: ubuntu-latest
     environment: IPFS
     name: Pin to IPFS
@@ -37,6 +37,8 @@ jobs:
         uses: actions/checkout@v4
         with:
           persist-credentials: false
+          fetch-depth: 50
+          fetch-tags: true
       - uses: actions/download-artifact@v3
         id: download
         with:
@@ -54,25 +56,27 @@ jobs:
           BLUMEN_W3S_TOKEN: ${{ secrets.W3S_TOKEN }}
           BLUMEN_GW3_TOKEN: ${{ secrets.GW3_TOKEN }}
           PATH_TO_IPFS_CONTENT: ${{ inputs.ipfs_folder }}
-      - name: Zip
+      - name: Create ipfs source code archive
         if: inputs.is_create_release
-        id: zip
+        id: car
         run: |
-          zip -r $FILE_NAME $PATH_TO_IPFS_CONTENT
+          mv /tmp/$PATH_TO_IPFS_CONTENT.car ./$FILE_NAME.car
+          zip -r $FILE_NAME.zip $PATH_TO_IPFS_CONTENT/
         env:
-          PATH_TO_IPFS_CONTENT: "${{ inputs.ipfs_folder }}/"
+          PATH_TO_IPFS_CONTENT: ${{ inputs.ipfs_folder }}
+          FILE_NAME: ${{ env.FILE_NAME }}
       - name: Set output tag and date
         if: inputs.is_create_release
         id: vars
         run: |
-          echo "TAG=${GITHUB_REF#refs/*/}" >> $GITHUB_OUTPUT
+          echo "TAG=`echo $(git describe --abbrev=0 --tags)`" >> $GITHUB_OUTPUT
           echo "DATE=$(date +'%Y-%m-%d')" >> $GITHUB_OUTPUT
       - name: Create or update IPFS release draft
         if: inputs.is_create_release
         run: >
           if gh release view $TAG;
-            then gh release edit $TAG --notes "$BODY" -t "$TITLE" --draft && gh release upload $TAG $FILE_NAME --clobber;
-            else gh release create $TAG --target=$TARGET -t "$TITLE" --notes "$BODY" --draft && gh release upload $TAG $FILE_NAME;
+            then gh release edit $TAG --notes "$BODY" -t "$TITLE" --draft && gh release upload $TAG $FILE_NAME.car $FILE_NAME.zip --clobber;
+            else gh release create $TAG --target=$TARGET -t "$TITLE" --notes "$BODY" --draft && gh release upload $TAG $FILE_NAME.car $FILE_NAME.zip;
           fi
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
