--- a/.github/workflows/ci-ipfs.yml
+++ b/.github/workflows/ci-ipfs.yml
@@ -60,10 +60,10 @@ jobs:
         if: inputs.is_create_release
         id: car
         run: |
-          mv /tmp/$PATH_TO_IPFS_CONTENT.car ./$FILE_NAME.car
+          mv $PATH_TO_IPFS_CAR ./$FILE_NAME.car
           zip -r $FILE_NAME.zip $PATH_TO_IPFS_CONTENT/
         env:
-          PATH_TO_IPFS_CONTENT: ${{ inputs.ipfs_folder }}
+          PATH_TO_IPFS_CAR: "/tmp/${{ inputs.ipfs_folder }}.car"
           FILE_NAME: ${{ env.FILE_NAME }}
       - name: Set output tag and date
         if: inputs.is_create_release
