fix: change env name

--- a/.github/workflows/ci-ipfs.yml
+++ b/.github/workflows/ci-ipfs.yml
@@ -60,10 +60,10 @@ jobs:
         if: inputs.is_create_release
         id: car
         run: |
-          mv /tmp/$IPFS_CAR_NAME.car ./$FILE_NAME.car
-          zip -r $FILE_NAME.zip $IPFS_CAR_NAME/
+          mv /tmp/$IPFS_CONTENT_NAME.car ./$FILE_NAME.car
+          zip -r $FILE_NAME.zip $IPFS_CONTENT_NAME/
         env:
-          IPFS_CAR_NAME: ${{ inputs.ipfs_folder }}
+          IPFS_CONTENT_NAME: ${{ inputs.ipfs_folder }}
           FILE_NAME: ${{ env.FILE_NAME }}
       - name: Set output tag and date
         if: inputs.is_create_release
