feat: add special name for ipfs pinning

--- a/.github/workflows/ci-ipfs.yml
+++ b/.github/workflows/ci-ipfs.yml
@@ -44,10 +44,17 @@ jobs:
         with:
           name: ${{ inputs.ipfs_folder }}
           path: ${{ inputs.ipfs_folder }}
+      - name: Set output tag and date
+        id: vars
+        run: |
+          echo "COMMIT_SHA=$(git rev-parse --short "$GITHUB_SHA")" >> "$GITHUB_OUTPUT"
+          echo "TAG=`echo $(git describe --abbrev=0 --tags)`" >> $GITHUB_OUTPUT
+          echo "DATE=$(date +'%Y-%m-%d')" >> $GITHUB_OUTPUT
+          echo "TIME=$(date +'%H:%M:%S')" >> $GITHUB_OUTPUT
       - name: IPFS pinning
         id: pinning
         run: |
-          export BODY_RESULT=`npx -y blumen@0.0.0 deploy $PATH_TO_IPFS_CONTENT`
+          export BODY_RESULT=`npx -y blumen@0.0.3 deploy $PATH_TO_IPFS_CONTENT --name $IPFS_PIN_NAME`
           echo "$BODY_RESULT" >> $GITHUB_STEP_SUMMARY
           echo "BODY_RESULT<<EOF" >> $GITHUB_OUTPUT   
           echo "$BODY_RESULT" >> $GITHUB_OUTPUT   
@@ -56,21 +63,17 @@ jobs:
           BLUMEN_W3S_TOKEN: ${{ secrets.W3S_TOKEN }}
           BLUMEN_GW3_TOKEN: ${{ secrets.GW3_TOKEN }}
           PATH_TO_IPFS_CONTENT: ${{ inputs.ipfs_folder }}
+          IPFS_PIN_NAME: "${{ github.event.repository.name }}:${{ steps.vars.outputs.COMMIT_SHA }}(${{ steps.vars.outputs.DATE }}:${{ steps.vars.outputs.TIME }})"
       - name: Create ipfs source code archive
         if: inputs.is_create_release
         id: car
         run: |
-          mv /tmp/$IPFS_CONTENT_NAME.car ./$FILE_NAME.car
+          mv /tmp/$IPFS_PIN_NAME.car ./$FILE_NAME.car
           zip -r $FILE_NAME.zip $IPFS_CONTENT_NAME/
         env:
           IPFS_CONTENT_NAME: ${{ inputs.ipfs_folder }}
           FILE_NAME: ${{ env.FILE_NAME }}
-      - name: Set output tag and date
-        if: inputs.is_create_release
-        id: vars
-        run: |
-          echo "TAG=`echo $(git describe --abbrev=0 --tags)`" >> $GITHUB_OUTPUT
-          echo "DATE=$(date +'%Y-%m-%d')" >> $GITHUB_OUTPUT
+          IPFS_PIN_NAME: "${{ github.event.repository.name }}:${{ steps.vars.outputs.COMMIT_SHA }}(${{ steps.vars.outputs.DATE }}:${{ steps.vars.outputs.TIME }})"
       - name: Get release body from existing release
         if: inputs.is_create_release
         id: body
