--- a/.github/workflows/ci-ipfs.yml
+++ b/.github/workflows/ci-ipfs.yml
@@ -67,22 +67,14 @@ jobs:
           TAG: ${{ inputs.tag }}
       - name: IPFS deploy
         id: deploy
-        run: |
-          BODY_RESULT=`npx -y blumen@0.8.1 deploy $PATH_TO_IPFS_CONTENT --name $IPFS_PIN_NAME`
-          echo "$BODY_RESULT" >> $GITHUB_STEP_SUMMARY
-          echo "BODY_RESULT<<EOF" >> $GITHUB_OUTPUT
-          echo "$BODY_RESULT" >> $GITHUB_OUTPUT
-          echo "EOF" >> $GITHUB_OUTPUT
-          echo "IPFS_PIN_NAME<<EOF" >> $GITHUB_OUTPUT
-          echo "$IPFS_PIN_NAME" >> $GITHUB_OUTPUT
-          echo "EOF" >> $GITHUB_OUTPUT
-        env:
-          BLUMEN_W3S_TOKEN: ${{ secrets.W3S_TOKEN }}
-          BLUMEN_W3S_PROOF: ${{ secrets.W3S_PROOF }}
-          BLUMEN_GW3_TOKEN: ${{ secrets.GW3_TOKEN }}
-          BLUMEN_GW3_ACCESS_KEY: ${{ secrets.GW3_ACCESS_KEY }}
-          BLUMEN_FILEBASE_TOKEN: ${{ secrets.FILEBASE_TOKEN }}
-          BLUMEN_FILEBASE_BUCKET_NAME: ${{ inputs.FILEBASE_BUCKET_NAME }}
+        uses: ./.github/actions/ipfs-deploy
+        with:
+          W3S_TOKEN: ${{ secrets.W3S_TOKEN }}
+          W3S_PROOF: ${{ secrets.W3S_PROOF }}
+          GW3_TOKEN: ${{ secrets.GW3_TOKEN }}
+          GW3_ACCESS_KEY: ${{ secrets.GW3_ACCESS_KEY }}
+          FILEBASE_TOKEN: ${{ secrets.FILEBASE_TOKEN }}
+          FILEBASE_BUCKET_NAME: ${{ inputs.FILEBASE_BUCKET_NAME }}
           PATH_TO_IPFS_CONTENT: ${{ inputs.ipfs_folder }}
           IPFS_PIN_NAME: "${{ github.event.repository.name }}:${{ steps.vars.outputs.TAG_COMMIT_SHA || steps.vars.outputs.COMMIT_SHA }}(${{ steps.vars.outputs.DATE }}:${{ steps.vars.outputs.TIME }})"
       - name: Create ipfs source code archive
@@ -94,33 +86,21 @@ jobs:
         env:
           IPFS_CONTENT_NAME: ${{ inputs.ipfs_folder }}
           FILE_NAME: ${{ env.FILE_NAME }}
-          IPFS_PIN_NAME: "${{ steps.deploy.outputs.IPFS_PIN_NAME }}"
+          IPFS_PIN_NAME: "${{ steps.deploy.outputs.ipfs_pin_name }}"
       - name: Get release body from existing release
         if: inputs.is_create_release
-        id: body
-        run: |
-          export EXISTING_BODY=`gh release view $TAG --json body | jq -r '.body'`
-          export EXISTING_TITLE=`gh release view $TAG --json name | jq -r '.name'`
-          echo "EXISTING_BODY<<EOF" >> $GITHUB_OUTPUT   
-          echo "$EXISTING_BODY" >> $GITHUB_OUTPUT   
-          echo "EOF" >> $GITHUB_OUTPUT
-          echo "EXISTING_TITLE<<EOF" >> $GITHUB_OUTPUT
-          echo "$EXISTING_TITLE" >> $GITHUB_OUTPUT
-          echo "EOF" >> $GITHUB_OUTPUT
-        env:
+        id: release-body
+        uses: "./.github/actions/get-release"
+        with:
           TAG: ${{ inputs.tag }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - name: Create or update IPFS release draft
         if: inputs.is_create_release
-        run: >
-          if gh release view $TAG;
-            then gh release edit $TAG --notes "$BODY" -t "$TITLE" && gh release upload $TAG $FILE_NAME.car $FILE_NAME.zip --clobber;
-            else gh release create $TAG --target=$TARGET -t "$TITLE" --notes "$BODY" --draft && gh release upload $TAG $FILE_NAME.car $FILE_NAME.zip;
-          fi
-        env:
+        uses: ./.github/actions/ipfs-release
+        with:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          BODY: "${{ steps.body.outputs.EXISTING_BODY }}\n\n${{ steps.deploy.outputs.BODY_RESULT }}"
+          BODY: "${{ steps.release-body.outputs.existing_release_body }}\n\n${{ steps.deploy.outputs.release_body }}"
           TAG: ${{ inputs.tag }}
-          TITLE: "${{ steps.body.outputs.EXISTING_TITLE }} (IPFS Pinning ${{ steps.vars.outputs.DATE }})"
+          TITLE: "${{ steps.release-body.outputs.existing_release_title }} (IPFS Pinning ${{ steps.vars.outputs.DATE }})"
           TARGET: ${{ inputs.current_branch }}
           FILE_NAME: ${{ env.FILE_NAME }}
